--- a/style.css
+++ b/style.css
@@ -1,45 +1,59 @@
 body {
   margin: 0;
-  background-color: #88c070;
-  font-family: "Press Start 2P", cursive;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: black;
   overflow: hidden;
 }
+
 .game-screen {
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
+
 .farm-bg {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
+
 .mailbox {
   position: absolute;
-  left: 50%;
-  top: 60%;
-  width: 64px;
-  height: 64px;
-  background: url('https://i.imgur.com/yUQoUo9.png') no-repeat center/contain;
-  transform: translate(-50%, -50%);
+  top: 60%;  /* chỉnh lại theo đúng vị trí bạn muốn */
+  left: 45%;
+  width: 60px;
+  height: 80px;
+  background-image: url('./assets/mailbox.png');  /* bạn cần thêm hình hộp thư pixel! */
+  background-size: contain;
+  background-repeat: no-repeat;
   cursor: pointer;
+  z-index: 10;
 }
+
 .popup {
   position: absolute;
   top: 10%;
   left: 10%;
   width: 80%;
   height: 80%;
-  background: #fdf5e6;
-  border: 4px solid #b56d29;
-  padding: 10px;
-  overflow-y: scroll;
-  z-index: 99;
+  background-color: rgba(255, 255, 255, 0.95);
+  border: 4px solid #444;
+  border-radius: 12px;
+  padding: 20px;
+  z-index: 999;
+  overflow-y: auto;
 }
+
 .popup.hidden {
   display: none;
 }
+
 .letters img {
   width: 100%;
-  margin-top: 10px;
+  max-width: 400px;
+  margin: 10px auto;
+  display: block;
 }
